force-app/main/default/objects/Affiliation_Staging_Record__c/Affiliation_Staging_Record__c.object-meta.xml
<CustomObject>
    <label>Affiliation Staging Record</label>
    <nameField>
        <displayFormat>ASR-{000000000}</displayFormat>
        <label>Affiliation Staging Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliation Staging Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>