force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Account_UFID__c.field-meta.xml
<CustomField>
    <fullName>Account_UFID__c</fullName>
    <label>Account UFID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>