force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliation</label>
    <referenceTo>Marketing_Program__c</referenceTo>
    <relationshipLabel>Affiliation Staging Records</relationshipLabel>
    <relationshipName>Affiliation_Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>