force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Affiliation_Id__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Id__c</fullName>
    <label>Affiliation Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>