force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Affiliation_UFID__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_UFID__c</fullName>
    <label>Affiliation UFID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>