force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Config_Batch_Size_ATQA__c.field-meta.xml
<CustomField>
    <fullName>Config_Batch_Size_ATQA__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Config Batch Size ATQA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>