force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Config_Enabled_For_Scheduled_Processing__c.field-meta.xml
<CustomField>
    <fullName>Config_Enabled_For_Scheduled_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Config Enabled For Scheduled Processing</label>
    <type>Checkbox</type>
</CustomField>