force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Config_ReQueues__c.field-meta.xml
<CustomField>
    <fullName>Config_ReQueues__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Config ReQueues</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>