force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Config_Toggled_Affiliation_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Toggled_Affiliation_Name__c</fullName>
    <label>Config Toggled Affiliation Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>