force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Config_UnQualified_UFID__c.field-meta.xml
<CustomField>
    <fullName>Config_UnQualified_UFID__c</fullName>
    <label>Config UnQualified UFID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>