force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Debug_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Debug_Algorithm__c</fullName>
    <label>Debug Algorithm</label>
    <length>50</length>
    <type>Text</type>
</CustomField>