force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Debug_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Debug_Batch_Size__c</fullName>
    <label>Debug Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>