force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Debug_Event_Processing_End__c.field-meta.xml
<CustomField>
    <fullName>Debug_Event_Processing_End__c</fullName>
    <label>Debug Event Processing End</label>
    <type>DateTime</type>
</CustomField>