force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Debug_Last_Processed_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Debug_Last_Processed_Created_Date__c</fullName>
    <label>Debug Last Processed Created Date</label>
    <type>DateTime</type>
</CustomField>