force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Debug_Last_Processed_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Debug_Last_Processed_Record_Ids__c</fullName>
    <label>Debug Last Processed Record Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>