force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Debug_Queue_Next_Step_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Debug_Queue_Next_Step_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug Queue Next Step Enabled</label>
    <type>Checkbox</type>
</CustomField>