force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Debug_ReQueues__c.field-meta.xml
<CustomField>
    <fullName>Debug_ReQueues__c</fullName>
    <label>Debug ReQueues</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>