force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Debug_Toggled_UnQualified_UFID__c.field-meta.xml
<CustomField>
    <fullName>Debug_Toggled_UnQualified_UFID__c</fullName>
    <label>Debug Toggled UnQualified UFID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>