force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Referenced_Account_UFID__c.field-meta.xml
<CustomField>
    <fullName>Referenced_Account_UFID__c</fullName>
    <formula>Account__r.UFID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referenced Account UFID</label>
    <type>Text</type>
</CustomField>