force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Referenced_Affiliation_UFID__c.field-meta.xml
<CustomField>
    <fullName>Referenced_Affiliation_UFID__c</fullName>
    <formula>Affiliation__r.UFID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referenced Affiliation UFID</label>
    <type>Text</type>
</CustomField>