force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Source_File_Record_Note__c.field-meta.xml
<CustomField>
    <fullName>Source_File_Record_Note__c</fullName>
    <label>Source File Record Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>