force-app/main/default/objects/Affiliation_Staging_Record__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>IF( $RecordType.DeveloperName = &quot;Qualified_Affiliation&quot;, &quot;Pending&quot;, &quot;&quot;)</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Ready for Processing</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>References Update Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>