force-app/main/default/objects/Affiliation_Staging_Record__c/recordTypes/Log_Entry.recordType-meta.xml
<RecordType>
    <fullName>Log_Entry</fullName>
    <active>true</active>
    <label>Log Entry</label>
</RecordType>