force-app/main/default/objects/Affiliation_Staging_Record__c/recordTypes/Qualified_Affiliation.recordType-meta.xml
<RecordType>
    <fullName>Qualified_Affiliation</fullName>
    <active>true</active>
    <label>Qualified Affiliation</label>
</RecordType>