force-app/main/default/objects/Affiliation_Staging_Record__c/recordTypes/Toggled_Affiliations.recordType-meta.xml
<RecordType>
    <fullName>Toggled_Affiliations</fullName>
    <active>true</active>
    <label>Toggled Affiliations</label>
</RecordType>