force-app/main/default/objects/Affiliation_Staging_Record__c/listViews/Affiliation_Program_Management_Debug_Log.listView-meta.xml
<ListView>
    <fullName>Affiliation_Program_Management_Debug_Log</fullName>
    <columns>NAME</columns>
    <columns>Debug_Algorithm__c</columns>
    <columns>Debug_Batch_Size__c</columns>
    <columns>Debug_ReQueues__c</columns>
    <columns>Debug_Queue_Next_Step_Enabled__c</columns>
    <columns>Debug_Toggled_Qualified_UFID__c</columns>
    <columns>Debug_Toggled_UnQualified_UFID__c</columns>
    <columns>Debug_Last_Processed_Created_Date__c</columns>
    <columns>Debug_Last_Processed_Record_Ids__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Affiliation_Staging_Record__c.Log_Entry</value>
    </filters>
    <label>Affiliation Program Management Debug Log</label>
</ListView>