force-app/main/default/objects/Affiliation_Staging_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account_UFID__c</columns>
    <columns>Account_Id__c</columns>
    <columns>Account__c</columns>
    <columns>Referenced_Account_UFID__c</columns>
    <columns>Affiliation_UFID__c</columns>
    <columns>Affiliation_Id__c</columns>
    <columns>Affiliation__c</columns>
    <columns>Referenced_Affiliation_UFID__c</columns>
    <columns>Date_Assigned__c</columns>
    <columns>Date_Removed__c</columns>
    <columns>Source_File_Record_Note__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>