force-app/main/default/objects/Affiliation_Staging_Record__c/listViews/Qualified_Affiliations.listView-meta.xml
<ListView>
    <fullName>Qualified_Affiliations</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_UFID__c</columns>
    <columns>Account_Id__c</columns>
    <columns>Account__c</columns>
    <columns>Referenced_Account_UFID__c</columns>
    <columns>Affiliation_UFID__c</columns>
    <columns>Affiliation_Id__c</columns>
    <columns>Affiliation__c</columns>
    <columns>Referenced_Affiliation_UFID__c</columns>
    <columns>Date_Assigned__c</columns>
    <columns>Date_Removed__c</columns>
    <columns>Source_File_Record_Note__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Affiliation_Staging_Record__c.Qualified_Affiliation</value>
    </filters>
    <filters>
        <field>Account_UFID__c</field>
        <operation>equals</operation>
        <value>A0099R</value>
    </filters>
    <label>Qualified Affiliations</label>
</ListView>