force-app/main/default/objects/Affiliation_Staging_Record__c/listViews/References_Update_Required.listView-meta.xml
<ListView>
    <fullName>References_Update_Required</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_UFID__c</columns>
    <columns>Account_Id__c</columns>
    <columns>Account__c</columns>
    <columns>Referenced_Account_UFID__c</columns>
    <columns>Affiliation_UFID__c</columns>
    <columns>Affiliation_Id__c</columns>
    <columns>Affiliation__c</columns>
    <columns>Referenced_Affiliation_UFID__c</columns>
    <columns>Date_Assigned__c</columns>
    <columns>Date_Removed__c</columns>
    <columns>Source_File_Record_Note__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Affiliation_Staging_Record__c.Qualified_Affiliation</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>References Update Required</value>
    </filters>
    <filters>
        <field>Account_UFID__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Affiliation_UFID__c</field>
        <operation>equals</operation>
    </filters>
    <label>References Update Required</label>
</ListView>